# breath-of-freedom

./: AGENTS.md  Cargo.toml  build.rs
assets/: Prototype.glb
assets/shaders/: outline.wgsl  overdraw.wgsl  toon.wgsl
docs/: AHORA.md  ARCHITECTURE-MAP.md  ARCHITECTURE.md  ASSET_PIPELINE.md  CONSTITUTION.md  COUPLING-MAP.md  NORTE.md  TICKET-TEMPLATE.md  WORKING-CONTEXT.md  WORKTREE-WORKFLOW.md  gdd.md
docs/architecture/: camera.md  combat.md  crafting.md  debug.md  enemies.md  health.md  input.md  inventory.md  mounts.md  movement.md  multiplayer.md  npcs.md  persistence.md  projectiles.md  sfx.md  snowboard.md  status-effects.md  swim.md  ui.md  vfx.md  world.md
docs/audits/: adversarial-arch-audit-2026-07-17-validated.md  adversarial-arch-audit-2026-07-17.md  mounts-actor-refactor-cold-audit.md  mounts-actor-refactor-validated-analysis.md
docs/implement-feature/: movement-capabilities-and-mount-lifecycle-plan.md  multi-actor-migration-plan.md  multi-actor-migration-solutions.md  proposal-core-extraction-plan.md  proposal-core-extraction-solutions.md  sfx-system-scaffolding-plan.md  sfx-system-scaffolding-solutions.md
docs/tickets/: LOG.md  README.md  bokobo-brain.md  climb-lip-jump-mantle.md  combat-bow-fixes.md  combat-bow.md  combat-game-feel.md  combat-melee-combo.md  combat-scaffolding.md  diagonal-climb-continuation-normal.md  enemies-combat.md  enemy-awareness.md  health-core.md  (+23 more)
src/: camera.rs  debug.rs  main.rs  player.rs  proposal.rs  visuals.rs  world.rs
tools/: blender_export.py  build_ranger_candidates.py  export_blender_asset.py
(+212 files in other folders)
