[package]
name = "breath-of-freedom"
version = "0.1.0"
edition = "2024"

[dependencies]
avian3d = { workspace = true }
bevy = { workspace = true }
petgraph = { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
gltf = { version = "1.4.1", features = ["extras"] }
serde_json = { workspace = true }
